@@ -10,6 +10,7 @@ Improved ZX Vision menu interface:
 -Show in file selector when a file can be expanded
 -Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
 -Maximizing windows now take care of zx desktop settings
+-Add item to reduce+rearrange windows
 
 
 Fixed file previews on corrupted files: pzx, tap
